<resources>
    <string name="app_name" translatable="false">TripicT</string>
    <string name="title_activity_trip_details">TripDetails</string>
    <string name="tripName">Nom du voyage</string>
    <string name="activityName">Nom de l\'activité</string>
    <string name="btnCreate">Créer</string>
    <string name="ErrorName">Veuillez saisir un nom entre 1 et 35 caractères</string>
    <string name="ActivityAdded">L\'activité a bien été créée</string>
    <string name="btnComment">Commentaires</string>
    <string name="noPost">Aucune publication à afficher</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="btnLogin">Connexion</string>
    <string name="linkSignup">Vous n\'avez pas encore de compte? Créez-vous en un maintenant!</string>
    <string name="Athenticating">Authentification...</string>
    <string name="loginFailed">Échec de la connexion. Veuillez corriger les erreurs</string>
    <string name="signupFailed">Échec de la création de votre compte. Veuillez corriger les erreurs</string>
    <string name="serverError">Échec de connexion au serveur</string>
    <string name="usernameError">Veuillez saisir un nom d\'utilisateur entre 5 et 35 caractères</string>
    <string name="passwordError">Veuillez saisir un mot de passe entre 8 et 35 caractères</string>
    <string name="firstName">Prénom</string>
    <string name="name">Nom de famille</string>
    <string name="btnSignup">Créer un compte</string>
    <string name="linkLogin">Déjà membre? Connectez-vous!</string>
    <string name="CreatingAccount">Compte en cours de création..</string>
    <string name="nameError">Veuillez saisir un nom de famille entre 1 et 50 caractères</string>
    <string name="firstNameError">Veuillez saisir un prénom entre 1 et 50 caractères</string>
    <string name="passwordCreatingError">Veuillez saisir un mot de passe entre 8 et 35 caractères</string>
    <string name="login">Connexion</string>
    <string name="open_drawer">Ouvrir</string>
    <string name="close_drawer">Fermer</string>
    <string name="title_activity_post_details">PostDetails</string>
    <string name="usernameSignupError">Veuillez saisir un nom d\'utilisateur entre 5 et 35 caractères</string>
    <string name="confirmPassword">Confirmation du mot de passe</string>
    <string name="passwordConfirmingError">Les mots de passes doivent être identiques</string>
    <string name="displayTrips">Liste des voyages</string>
    <string name="displayActivities">Liste des activités</string>
    <string name="dialogTitle">DialogTitle</string>
    <string name="add">Ajouter</string>
    <string name="cancel">Annuler</string>
    <string name="createActivity">Créer une activité</string>
    <string name="noActivity">Aucune activité à afficher</string>
    <string name="createTrip">Créer un voyage</string>
    <string name="noTrip">Aucun voyage à afficher</string>
    <string name="TripAdded">Le voyage a été ajouté</string>
    <string name="displayPosts">Liste des posts</string>
    <string name="PleaseWait">Veuillez patienter</string>
    <string name="ServerAnswer">Attente de réponse du serveur</string>
    <string name="MyTrips">Mes Voyages</string>
    <string name="logout">Déconnexion</string>
    <string name="goBack">Retour</string>
    <string name="friendsInTrip">Membres du voyage</string>
    <string name="addFriends">Ajouter des amis au voyage</string>
    <string name="findFriend">Nom, Prénom ou Username</string>
    <string name="addAll">Ajouter Tous</string>
    <string name="confirm">Confirmer</string>
    <string name="usernameExists">Ce nom d\'utilisateur est déjà pris. Choisissez-en un autre</string>
    <string name="deleteFriend">Supprimer</string>
    <string name="usersAdded">Les utilisateurs ont bien été ajoutés</string>
    <string name="hello">Bonjour</string>
    <string name="connectionError">Le nom d\'utilisateur ou le mot de passe est incorrect</string>
    <string name="comments">Commentaires</string>
    <string name="yourComment">Votre commentaire</string>
    <string name="submit">Soumettre</string>
    <string name="CommentCreated">Commentaire créé</string>
    <string name="place">Emplacement</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="error_api_key">Clé API</string>
    <string name="location">Emplacement</string>
</resources>
