<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_signup.SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView
                android:layout_width="292dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />
            <!--  First Name Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/firstName" />
            </android.support.design.widget.TextInputLayout>

            <!--  Name Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <!-- Username Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_usernameSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_passwordSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_passwordSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Confirm Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirmPassword"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:textAllCaps="false"
                android:textColor="@color/ghostWhite"
                android:background="@color/colorPrimary"
                android:text="@string/btnSignup"/>

            <TextView android:id="@+id/link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/linkLogin"
                android:gravity="center"
                android:textSize="16dip"
                android:textColor="@color/text_color"/>

        </LinearLayout>
    </ScrollView>


</android.support.v4.widget.DrawerLayout>