<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/addFriendsDialog">

    <android.support.design.widget.TextInputLayout
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:id="@+id/inputLayout_findFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <AutoCompleteTextView
            android:id="@+id/actv_findFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/findFriend"
            android:completionThreshold="1"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:textColor="@color/ghostWhite"
                        android:background="@color/colorPrimary"
                        android:text="@string/add" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:padding="12dp"
                        android:textColor="@color/ghostWhite"
                        android:background="@color/colorPrimary"
                        android:text="@string/cancel" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_addAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:padding="12dp"
                        android:textColor="@color/ghostWhite"
                        android:background="@color/colorPrimary"
                        android:text="@string/confirm" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">
                <ListView
                    android:id="@+id/lvAddFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </ListView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>